--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,8 @@
     color: #181818;
 }
 .section-description{
-    align-content: center;
+    margin-top: 30px;
+    margin-bottom: 50px;
     color: #757575;
     font-size: 18px;
 }
@@ -39,6 +40,9 @@
     background-color: #FFFFFF;
     color: rgb(253, 110, 10);
     transition: 0.3s ease-in-out;   
+}
+.text-center {
+    text-align: center;
 }
 .header{
     background-image: url('../img/developer.png'), url('../img/header_bg.png');
@@ -123,10 +127,13 @@ main {
     max-width: 1440px;
     margin: 0 auto;
 }
+main section {
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
 /* MAIN END */
 /* ABOUT START */
 .about {
-    margin-top: 130px;
     padding: 130px 150px;
     text-align: center;
     border-radius: 10px;
@@ -141,3 +148,17 @@ main {
     font-weight: 600;
 }
 /* ABOUT END */
+/* SKILL SECTION STYLE START */
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+.skill {
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-description{
+    margin-right: 64px;
+}
+/* SKILL SECTION STYLE END */
